@@ -7,6 +7,8 @@ linux (4.18~rc3-1~exp1) UNRELEASED; urgency=medium
   * netfilter: ipvs: Fix invalid bytes in IP_VS_MH_TAB_INDEX help text
   * Update config for 4.18 using kconfigeditor2
     - [x86,arm64] PCI: HOTPLUG_PCI_SHPC is now built-in
+  * Move config files from linux-source-<version> to an arch-dependent
+    linux-config-<version> package
 
   [ YunQiang Su ]
   * [mips*r6*] Enable dtb building for boston.
